--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -27,12 +27,27 @@ services:
     image: prom/prometheus    
     volumes: 
       - ./prometheus.yaml:/etc/prometheus/prometheus.yml
+      - ./alert.rules.yaml:/etc/prometheus/alert.rules.yml
     ports:
       - "9090:9090"
     depends_on:
       - corecrudapi
     networks:
       - corecrud
+  
+  alertmanager:
+    image: prom/alertmanager
+    ports:
+      - "9093:9093"
+    volumes: 
+      - ./alertconfig.yaml:/etc/alertmanager/alertconfig.yaml
+    command:
+      - '-config.file=/etc/alertmanager/alertconfig.yml'      
+    depends_on:
+      - prometheus
+    networks:
+      - corecrud      
+
 
   grafana:
     image: grafana/grafana:5.3.2     
