--- a/src/alert.rules.yaml
+++ b/src/alert.rules.yaml
@@ -3,7 +3,7 @@ groups:
   rules:
   - alert: ManyRequests
     expr: rate(application_httprequests_transactions_count{env="$environment",app="$application",server="$server"}[1m])*60 > 2
-    for: 1m
+    for: 1s
     labels:
       severity: page
     annotations:
