--- a/src/prometheus.yaml
+++ b/src/prometheus.yaml
@@ -4,11 +4,11 @@ global:
   evaluation_interval: 30s
   # scrape_timeout is set to the global default (10s).
 
-  # rule_files:
-  #   - 'alert.rules.yml'
-
   external_labels:
-    monitor: codelab    
+    monitor: codelab
+
+rule_files:
+- "alert.rules"        
 
 scrape_configs: 
   - job_name: 'appmetrics'
