--- a/src/prometheus.yaml
+++ b/src/prometheus.yaml
@@ -30,7 +30,7 @@ scrape_configs:
 
 alerting:
   alertmanagers:
-  - scheme: https
+  - scheme: http
     static_configs:
     - targets:
       - "alertmanager:9093"
